Crud service for platforms
